--- a/src/sections/login.html
+++ b/src/sections/login.html
@@ -3,12 +3,12 @@
   <p class="font-bold text-3xl">Welcome back</p>
   <p class="text-sm text-gray-500 mt-3">Welcome back! Please enter your details</p>
 
-  <form action="" class="flex flex-col mt-10 text-gray-500 font-medium">
+  <form id="loginForm" class="flex flex-col mt-10 text-gray-500 font-medium">
     <label for="">E-mail:</label>
-    <input type="email" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md">
+    <input type="email" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md" id="email">
     <label for="">Password:</label>
-    <input type="password" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md">
-    <button class="my-3  bg-customBlue text-white  w-3/4 py-1 rounded-md">Log in</button>
+    <input type="password" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md" id="password">
+    <button class="my-3  bg-customBlue text-white  w-3/4 py-1 rounded-md" type="submit" onclick="addFormSubmitHandler()">Log in</button>
   </form>
 </div>
 <div class="w-1/2">
