Appointments form loader

--- a/collectorPortal.html
+++ b/collectorPortal.html
@@ -17,7 +17,7 @@
   <body class="">
     <div class="flex">
     <div id="nav"></div>
-    <div id="main" class="lg:h-[100vh] w-full lg:w-4/5 pl-10 py-5 pr-16 bg-customGray">
+    <div id="main" class="w-full lg:w-4/5 pl-10 py-5 pr-16 bg-customGray">
 
     </div>
   </body>
@@ -79,13 +79,13 @@
     <p>Welcome to your route management portal</span></p>
 </div>
 <div class="lg:flex gap-10">
-    <div class="bg-white mt-10 rounded-xl p-5 w-full lg:w-3/5 lg:h-[280px]">
+    <div class="bg-white mt-10 rounded-xl p-5 w-full lg:w-3/5">
     <p class="font-semibold text-[#3d3d3d] text-lg">Scheduled collections</p>
     <p class="font-semibold text-[#3d3d3d] text-md mt-8">Please enter a new route name</p>
       <form action="" class="mt-4">
         <input type="text" id="routeName" name="route" placeholder="Enter a route name" class="w-full mx-auto px-5 rounded-md py-2 border-[#8a8a8a] border">
         <textarea name="Comment" id="description" class="w-full h-36 mt-5 px-5 rounded-md py-2 border-[#8a8a8a] border" placeholder="Route description" required></textarea>
-        <select id="day" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md mt-2" required>
+        <select id="day" class="w-full mx-auto px-5 rounded-md py-2 border-[#8a8a8a] border" mt-5 required>
                  <option value="" disabled >Operation Day</option>
                   <option value="MONDAY" >MONDAY</option>
                   <option value="TUESDAY">TUESDAY</option>
