--- a/index.html
+++ b/index.html
@@ -1,76 +1,40 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/output.css" />
     <title>Website Project</title>
-  </head>
-  <script>
-    const loadComponents = (id, url) => {
-      fetch(url)
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById(id).innerHTML = html;
-    })
-    };
-    //login form
-    const addFormSubmitHandler = () => {
-      const form = document.getElementById('loginForm');
-      if(!form){
-        console.log("missing") 
-      }
-      form.addEventListener('submit', (event) => {
-        console.log("Here to conquer")
-        event.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        fetch('http://localhost:3000/users/login', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({
-            email: email,
-            password: password
-          })
-        })
-        .then(response => response.json())
-        .then(data => {
-         if(data.status===201){
-          localStorage.setItem("role",data.role)
-          localStorage.setItem("token",data.token)
-          if(data.role==='COLLECTOR'){
-          window.location.href = 'collectorPortal.html';
-          }
-          if(data.role==='USER'){
-            window.location.href = 'householdPortal.html';
-          }
-
-         }
-         else{
-          alert(data.message)
-         }
-        })
-        .catch((error) => {
-          console.error('Error:', error);
-        });
-      });
-    }; 
-
-
-    window.onload = () => {
-      loadComponents("login", "src/sections/login.html");
-    };
-  </script>
-  <body class="relative">
-    <div id="login" class=""></div>
-  </body>
+</head>
+<body>
+    <div class="flex justify-between  mx-[10%]">
+    <img src="./src/images/logo.png" class="w-44 py-10 " alt="">
+    <a class="my-auto" href="/index.html"><i class="fa-solid fa-arrow-right-from-bracket mr-5"></i> Log out</a>
+    </div>
+    <div class="bg-[#F5F5F5] w-[80%] mr-[10%] ml-[10%] h-[80vh] rounded-md">
+        <p class="text-center mx-32 pt-10 text-[#494949] font-medium text-2xl">Welcome to your household portal, thank you for choosing <span class="text-[#2DAE49]">GoGreen</span>, choose your next step closer to a <span class="text-[#2DAE49]">green</span> community.</p>
+        <div class="flex flex-row gap-12 justify-center mt-10">
+              <div class="bg-white w-72 h-72 rounded-md hover:border border-[#2DAE49]">
+                <a href="/householdBooking.html">
+                    <img src="./src/images/schedule (1) 1.png" class="mx-auto mt-10" alt="">
+                    <p class="text-center mx-auto pt-10 text-[#494949] font-medium text-xl">Book a collection slot</p>
+                </a>
+                </div>
+                <div class="bg-white w-72 h-72 rounded-md hover:border border-[#2DAE49]">
+                    <img src="./src/images/recycle-symbol (2) 1.png" class="mx-auto mt-10" alt="">
+                    <p class="text-center mx-5 pt-10 text-[#494949] font-medium text-xl">Track your previous collections</p>
+                </div>
+        </div>
+    </div>
+   
+</body>
 </html>
