--- a/index.html
+++ b/index.html
@@ -16,22 +16,19 @@
     <title>Website Project</title>
 </head>
 <body>
-    <div class="flex justify-between  mx-[10%]">
-    <img src="./src/images/logo.png" class="w-44 py-10 " alt="">
-    <a class="my-auto" href="/index.html"><i class="fa-solid fa-arrow-right-from-bracket mr-5"></i> Log out</a>
-    </div>
+    <img src="./src/images/logo.png" class="w-44 py-10 mx-auto" alt="">
     <div class="bg-[#F5F5F5] w-[80%] mr-[10%] ml-[10%] h-[80vh] rounded-md">
-        <p class="text-center mx-32 pt-10 text-[#494949] font-medium text-2xl">Welcome to your household portal, thank you for choosing <span class="text-[#2DAE49]">GoGreen</span>, choose your next step closer to a <span class="text-[#2DAE49]">green</span> community.</p>
+        <p class="text-center mx-32 pt-10 text-[#494949] font-medium text-2xl">Welcome to <span class="text-[#2DAE49]">GoGreen</span>, choose your next step closer to a <span class="text-[#2DAE49]">greener</span> community.</p>
         <div class="flex flex-row gap-12 justify-center mt-10">
               <div class="bg-white w-72 h-72 rounded-md hover:border border-[#2DAE49]">
                 <a href="/householdBooking.html">
-                    <img src="./src/images/schedule (1) 1.png" class="mx-auto mt-10" alt="">
-                    <p class="text-center mx-auto pt-10 text-[#494949] font-medium text-xl">Book a collection slot</p>
+                    <img src="./src/images/register (1).png" class="mx-auto mt-10" alt="">
+                    <p class="text-center mx-auto pt-10 text-[#494949] font-medium text-xl">Register</p>
                 </a>
                 </div>
                 <div class="bg-white w-72 h-72 rounded-md hover:border border-[#2DAE49]">
-                    <img src="./src/images/recycle-symbol (2) 1.png" class="mx-auto mt-10" alt="">
-                    <p class="text-center mx-5 pt-10 text-[#494949] font-medium text-xl">Track your previous collections</p>
+                    <img src="./src/images/avatar (5).png" class="mx-auto mt-10" alt="">
+                    <p class="text-center mx-5 pt-10 text-[#494949] font-medium text-xl">Login</p>
                 </div>
         </div>
     </div>
