--- a/register.html
+++ b/register.html
@@ -14,27 +14,27 @@
 <body>
   <div>
     <div class="flex relative">
-        <div class="w-1/2 px-32 my-auto">
-            <img src="./src/images/logo.png" class="w-60" alt="">
+        <div class="lg:w-1/2 w-[80%] px-10 py-5 lg:px-32 my-10 lg:my-auto absolute top-10 lg:static bg-white mx-[10%] lg:mx-0 rounded-md">
+            <img src="./src/images/logo.png" class="mx-auto mt-5 lg:mx-0 lg:mt-0 w-40 lg:w-60" alt="">
             
             <form id="loginForm" action="" class="flex flex-col mt-10 text-gray-500 font-medium">
               <label for="">Name:</label>
-              <input type="text" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md" id="name">
+              <input type="text" class="my-3 border border-gray-400 lg:w-3/4 py-1 px-4 rounded-md" id="name">
               <label for="">E-mail:</label>
-              <input type="email" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md" id="email">
+              <input type="email" class="my-3 border border-gray-400 lg:w-3/4 py-1 px-4 rounded-md" id="email">
               <label for="">Password:</label>
-              <input type="password" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md" id="password">
+              <input type="password" class="my-3 border border-gray-400 lg:w-3/4 py-1 px-4 rounded-md" id="password">
               <label for="">Type</label>
               <div>
-                <select id="role" class="my-3 border border-gray-400 w-3/4 py-1 px-4 rounded-md">
+                <select id="role" class="my-3 border border-gray-400 lg:w-3/4 py-1 lg:px-4 rounded-md">
                   <option value="COLLECTOR" >Company</option>
                   <option value="USER">House Hold</option>
               </select>
             </div>
-              <button class="my-3 bg-customBlue text-white  w-3/4 py-1 rounded-md" onclick="addFormSubmitHandler()">Register</button>
+              <button class="my-3  bg-customBlue text-white mb-5 lg:mb-0  lg:w-3/4 py-1 rounded-md" onclick="addFormSubmitHandler()">Register</button>
               </form>
               </div>
-              <div class="w-1/2">
+              <div class="w-full lg:w-1/2">
                 <img src="./src/images/login.png" class="h-[100vh] w-full" alt="">
                 </div>
                 </div>
@@ -82,5 +82,4 @@
     };
   </script>              
                 </html>
-                <p class="font-bold text-3xl mt-16">Welcome</p>
-                <p class="text-sm font-medium text-gray-500 mt-3"><span class="text-[#2DAE49]">GoGreen</span> welcomes you! <br> Please enter your details to register!</p>
+              
