add hosted backend service

--- a/collectorPortal.html
+++ b/collectorPortal.html
@@ -27,7 +27,7 @@
 <script>
   const element=document.getElementById('nav')
   const main=document.querySelector('#main')
-  const baseUrl = "http://localhost:3000"
+  const baseUrl = "https://wastemanagementproject.onrender.com"
   const addNewRoute = ()=>{
     event.preventDefault()
     const name = document.getElementById("routeName").value
