--- a/householdPortal.html
+++ b/householdPortal.html
@@ -27,7 +27,7 @@
 <script>
   const element=document.getElementById('yeah')
   const main=document.querySelector('#main')
-  const baseUrl = "http://localhost:3000"
+  const baseUrl = "https://wastemanagementproject.onrender.com"
   const addNewSchedule = ()=>{
     event.preventDefault()
     console.log("Hello")
