--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
         const name = document.getElementById('name').value;
         const role = document.getElementById('role').value
 
-        fetch('http://localhost:3000/users/register', {
+        fetch('https://wastemanagementproject.onrender.com/users/register', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
