--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        fetch('http://localhost:3000/users/login', {
+        fetch('https://wastemanagementproject.onrender.com/users/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
