--- a/householdPortal.html
+++ b/householdPortal.html
@@ -390,6 +390,7 @@ function loadAppointments(){
   window.onload=()=>{
     
     element.innerHTML=`<div class='w-72 h-[100vh] flex flex-col space-y-7 pl-10 pt-32 border-r-2 font-medium'>
+        <img src="./src/images/logo.png" class="ml-3 w-40 mb-16" alt="">
     <p class='flex p-3' id='dash'><img class='mr-5' src='./src/images/1828791 1.png' alt=''>Dashboard</p>
     <p class='flex p-3' id='appo'><img class='mr-5' src='./src/images/appointment.png' alt=''>Appointments</p>
     <a class="pt-20 ml-3 " href="/index.html"><i class="fa-solid fa-arrow-right-from-bracket mr-5"></i> Log out</a>
