--- a/householdPortal.html
+++ b/householdPortal.html
@@ -161,7 +161,7 @@
 <div class="description mt-10 text-[#494949] font-medium text-md">
     <p>Welcome to your dashboard! Here you can efficiently manage your routes, track your collection schedule, and monitor your performance to help keep our community <span class="text-[#1344B2]">clean</span> and <span class="text-[#2DAE49]">green.</span></p>
 </div>
-<div class="lg:flex gap-10">
+<div class="flex flex-col lg:flex-row gap-10">
     <div class="bg-white mt-10 rounded-xl p-5 w-3/5 h-[370px]">
     <p class="font-semibold text-[#3d3d3d] text-lg">Scheduled collections</p>
     <div class="flex gap-20 mt-5 text-[#1344B2] font-semibold" id="newColumn">
