--- a/index.html
+++ b/index.html
@@ -1,39 +1,94 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/src/output.css" />
-    <title>Website Project</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tac+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
 </head>
 <body>
-    <img src="./src/images/logo.png" class="w-44 py-10 mx-auto" alt="">
-    <div class="bg-[#F5F5F5] w-[80%] mr-[10%] ml-[10%] lg:h-[80vh] pb-10 lg:pb-0 rounded-md mb-10 lg:mb-auto">
-        <p class="text-center mx-2 lg:mx-32 pt-10 text-[#494949] font-medium text-2xl">Welcome to <span class="text-[#2DAE49]">GoGreen</span>, choose your next step closer to a <span class="text-[#2DAE49]">greener</span> community.</p>
-        <div class="flex flex-col lg:flex-row gap-12 justify-center mt-10">
-              <div class="bg-white w-72 h-72 mx-auto lg:mx-0 rounded-md hover:border border-[#2DAE49]">
-                <a href="/register.html">
-                    <img src="./src/images/register (1).png" class="mx-auto mt-10" alt="">
-                    <p class="text-center mx-auto pt-10 text-[#494949] font-medium text-xl">Register</p>
-                </a>
-                </div>
-                <div class="bg-white w-72 h-72 mx-auto lg:mx-0 rounded-md hover:border border-[#2DAE49]">
-                    <a href="/login.html">
-                        <img src="./src/images/avatar (5).png" class="mx-auto mt-10" alt="">
-                    <p class="text-center mx-5 pt-10 text-[#494949] font-medium text-xl">Login</p>
-                    </a>
-                </div>
+<header>
+ <img class="logo" src="./src/images/logo.png" alt="">
+ <div class="navbar">
+  <ul class="nav">
+    <li>Services</li>
+    <li>About Us</li>
+      <li>
+        <a href="/main.html"><button><p>Join US</p></button></a>
+      </li>
+  </ul>
+ </div>
+</header>
+<main>
+  <div class="book">
+<img src="" alt="">
+<div class="booker">
+  <h1>Contribute towards a green clean world</h1>
+  <div id="book">
+    <button>
+      <p>E-waste management</p>
+    </button>
+    <button>
+      <p>Timely waste collection</p>
+    </button>
+    <button>
+      <p>Recycling tracker</p>
+    </button>
+  </div>
+</div>
+  </div>
+
+  <div class="part-2">
+
+      <div class="holiday">
+        <div class="overlay">
+          <h3>Track and schedule your <br>garbage collection</h3>
+          <p>These exceptional services offer <br> transparency and adequacy in waste management.</p>
+         <a href="/main.html"><button>Join Us</button></a>
         </div>
-    </div>
-   
+      </div>
+      <div class="family">
+      <h1>Browse Our Services</h1>
+
+      <div class="fampics">
+        <div class="famtrip">
+          <img src="assets/sonja-langford-eIkbSc3SDtI-unsplash.jpg" alt="">
+          <h5>SCHEDULING</h5>
+        </div>
+        <div class="famtrip">
+          <img src="assets/rivage-aI4RJ--Mw4I-unsplash.jpg" alt="">
+          <h5>RECYCLING</h5>
+        </div>
+      </div>
+      </div>
+    
+      <div class="info">
+        <h1>What is GoGreen?</h1>
+        <p>GoGreen is your competent contact for efficient and eco-friendly waste management. As a platform for garbage collection services, GoGreen offers you seamless solutions for scheduling garbage collection and checking the recycling status. With GoGreen, both garbage collectors and household users can easily manage their waste collection needs. The platform provides secure transactions, 24/7 support, and a user-friendly interface with numerous practical filters, making it easy to schedule collections and monitor recycling efforts. With GoGreen, you can be sure of a stress-free and environmentally responsible waste management experience, from scheduling collections to tracking your recycling status.</p>
+        <h1 class="secondh1">Scheduling Garbage Collection with GoGreen: The Advantages</h1>
+        <p>Households and garbage collectors alike appreciate the advantages of GoGreen: more efficiency, more transparency, and more control. With GoGreen, you have the flexibility and convenience to schedule collections at your convenience, ensuring your waste is managed effectively. Whether you need to schedule a one-time pick-up or regular collections, GoGreen provides solutions tailored to your needs. Are you looking to monitor the recycling status of your waste? Or need to ensure timely collection of your garbage? No problem, because GoGreen offers comprehensive features to meet your requirements for household waste management, community cleanliness, and environmental sustainability.</p></div>
+
+  <div class="popular">
+    <h1>Popular Features of GoGreen</h1>
+    <h3>Schedule Garbage Collection</h3>
+    <h3>Real-time Recycling Status</h3>
+    <h3>Multiple Collection Points Management</h3>
+    <h3>User-friendly Interface</h3>
+  </div>
+  
+  </div>
+</main>
+
+<footer>
+  <div class="foot">
+    <img src="./src/images/logo.png" alt="">
+    <div class="realfooter">
+
+      <p>Developed in 2024 by GoGreen</p>
+  </div>
+</div>
+</footer>
 </body>
 </html>
